[package]
name = "pubky-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common types and cryptography for Pubky MVP"

[dependencies]
base32 = "0.5.1"
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
rand = "0.9.0"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
