[package]
name = "pubky-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Simple HTTP server for Pubky MVP"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
pubky-common = { path = "../common" }
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10.0"
